More preact stuff

--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -7,6 +7,7 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>assets/icons/apple-touch-icon.png">
+        <link href='https://css.gg/css' rel='stylesheet'>
 		<% preact.headEnd %>
 	</head>
 	<body>
